[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "newspaper3k>=0.2.8",
    "nltk>=3.9.1",
    "openai>=1.79.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.34.2",
]
