[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "duckduckgo-search>=8.0.2",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "json-repair>=0.44.1",
    "langchain-core>=0.3.60",
    "langgraph>=0.4.5",
    "markdownify>=1.1.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
]
