[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "backoff>=2.2.1",
    "fastapi>=0.115.12",
    "fuzzywuzzy>=0.18.0",
    "google-generativeai>=0.8.5",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "python-levenshtein>=0.27.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "spacy>=3.8.7",
    "uvicorn>=0.34.2",
]
